--- a/locales/en.json
+++ b/locales/en.json
@@ -3,7 +3,7 @@
     "By": "By",
     "About": "About",
     "Website": "Website",
-    "Total": "Total",
+    "Total": "",
     "No posts": "No posts",
     "1 post": "1 post",
     "% posts": "% posts",
