adding additional language support

--- a/locales/en.json
+++ b/locales/en.json
@@ -9,12 +9,15 @@
     "% posts": "% posts",
     "0 Comments": "0 Comments",
     "Continue Reading": "Read",
+    "Conributors": "Contributors",
+    "Links": "Links",
     "Page {page} of {pages}": "Page {page} of {pages}",
-    "Previous Post :": "Previous Post :",
-    "Next Post :": "Next Post :",
-    "Advertisement": "Advertisement",
+    "Previous Post": "Previous Post:",
+    "Next Post": "Next Post:",
     "Facebook": "Facebook",
-    "Flickr": "Flickr",
+    "Search": "Search",
+    "Search Posts": "Search all posts",
+    "Recent": "Recent",
     "Google +": "Google +",
     "Recent Post": "Recent Post",
     "Subscribe to our newsletter": "Subscribe to our newsletter",
