--- a/locales/en.json
+++ b/locales/en.json
@@ -26,6 +26,5 @@
     "Follow": "Follow",
     "Tags": "Tags",
     "Twitter": "Twitter",
-    "Copyright": "Copyright",
-    "All right Reserved.": "All right Reserved."
+    "Copyright": "©2019 Hackers and Slackers, All Rights Reserved."
 }
