--- a/locales/es.json
+++ b/locales/es.json
@@ -26,6 +26,5 @@
     "Your email address": "Tu correo electrónico",
     "Tags": "Etiquetas",
     "Twitter": "Twitter",
-    "Copyright": "Derechos de autor",
-    "All right Reserved.": "Todos los derechos reservados."
+    "Copyright": "Derechos de autor"
 }
