--- a/locales/en.json
+++ b/locales/en.json
@@ -8,7 +8,7 @@
     "1 post": "1 post",
     "% posts": "% posts",
     "0 Comments": "0 Comments",
-    "Continue Reading": "Read",
+    "Continue Reading": "Continue Reading",
     "Conributors": "Contributors",
     "Links": "Links",
     "Page {page} of {pages}": "Page {page} of {pages}",
