--- a/locales/en.json
+++ b/locales/en.json
@@ -26,5 +26,5 @@
     "Follow": "Follow",
     "Tags": "Tags",
     "Twitter": "Twitter",
-    "Copyright": "©2019 Hackers and Slackers, All Rights Reserved."
+    "Copyright": "©2019 Ghostthemes, All Rights Reserved."
 }
